# xrds-teachable-machine

./: .gitignore  app.py  default.nix
game/: .gitignore  Cargo.toml  default.nix  rustfmt.toml
game/.cargo/: config.toml
game/assets/: pop.m4a
game/src/: main.rs
static/: bark.opus  game.html  machine.js  song.opus  style.css  xrds-teachable-machine.js
static/model/: metadata.json
templates/: about.html  base.html  index.html
